BAK/infrastructure/networking/traefik/base/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.hogwarts.zone"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.hogwarts.zone"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-hogwarts-zone-tls
      allowedRoutes:
        namespaces:
          from: All
